# swagger/swagger.yml
@@ -1,6 +1,6 @@
 swagger: "2.0"
 info:
-  title: beego Test API
+  title: Simple Store API
   description: beego has a very cool tools to autogenerate documents for your API
   version: 1.0.0
   termsOfService: http://beego.me/
@@ -68,16 +68,23 @@ paths:
         description: body of this request
         required: true
         schema:
-          $ref: '#/definitions/datatransfers.RegisterReques'
+          $ref: '#/definitions/datatransfers.RegisterRequest'
       responses:
         "200":
           description: ""
         "403":
           description: ""
 definitions:
-  datatransfers.RegisterReques:
-    title: RegisterReques
+  datatransfers.RegisterRequest:
+    title: RegisterRequest
     type: object
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+      username:
+        type: string
 tags:
 - name: public/metadata
   description: |
